crates/test-ui/ui/extern_class_thread_kind_invalid.stderr
error[E0038]: the trait `ThreadKind` is not dyn compatible
 --> ui/extern_class_thread_kind_invalid.rs
  |
  | / extern_class!(
  | |     #[unsafe(super(NSObject))]
  | |     #[thread_kind = ThreadKind]
  | |     struct BogusThreadKind;
  | | );
  | |_^ `ThreadKind` is not dyn compatible
  |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  |     const __DYN_INCOMPATIBLE: ();
  |           ^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because it contains associated const `__DYN_INCOMPATIBLE`
  = note: this error originates in the macro `$crate::__extern_class_inner` which comes from the expansion of the macro `extern_class` (in Nightly builds, run with -Z macro-backtrace for more info)
